fix: disable custom scrollbar

--- a/src/frontend/src/styles/dashboard.scss
+++ b/src/frontend/src/styles/dashboard.scss
@@ -8,10 +8,10 @@
   min-height: 500px;
 }
 
-div.scrollable-wrapper {
+/* div.scrollable-wrapper {
   height: 50px;
   overflow: auto;
-}
+} */
 
 .linkedin-social-icon-link {
   &:hover {
